fix: wrong background-color on DeleteButton component

--- a/src/pages/components/Buttons/DeleteButton.css
+++ b/src/pages/components/Buttons/DeleteButton.css
@@ -1,14 +1,15 @@
 .delete-button {
-    font-family: 'Open Sans', sans-serif !important;
-    background-color: transparent !important;
-    padding: 15px 32px !important;
-    font-size: 15px !important;
-    border-radius: 10px !important;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #FF4646;
+    padding: 15px 32px;
+    font-size: 15px;
+    border-radius: 10px;
     cursor: pointer;
-    color: #FF4646 !important;
+    color: white;
+    border: none;
 }
 
 .delete-button:hover {
-    background-color: #FF4646 !important;
-    color: #F9F9F9 !important;
+    background-color: #e01d1d;
+    color: #F9F9F9;
 }
